# cclone

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.bat  appveyor.yml  build-dep-mingw.sh  build-dep.sh  build-mingw.sh  build.sh  format.sh
include/: cclone-cfg.h  cclone.h  log.h  macro.h  rc.h
include/argon2/: argon2.h  core.h
include/argon2/blake2/: blake2.h  blamka-round-opt.h
include/crypt/: block-crypt.h  cryptmt.h  file-crypt.h  hc256.h  key.h  random-bytes.h  skein-mac.h  threefish-ctr.h  threefish.h
include/crypt/cryptmt/: ecrypt-machine.h  ecrypt-portable.h  ecrypt-sync.h  params.h
include/skein3fish/: skein.h
include/utils/: cleanup.h  convert.h  file.h  tinydir.h  zbase32.h
src/: cclone-cfg.h.in  log.c  main.c  rc.c
src/argon2/: argon2.c  core.c  opt.c  thread.c
src/argon2/blake2/: blake2b.c
src/crypt/: block-crypt.c  cryptmt.c  file-crypt.c  hc256.c  key.c  random-bytes.c  skein-mac.c  threefish-ctr.c  threefish.c
src/crypt/cryptmt/: altivec.c  cryptmt-v3.c  sse2.c
src/skein3fish/: skein.c  skeinBlockNo3F.c  threefish1024Block.c  threefish256Block.c  threefish512Block.c  threefishApi.c
src/utils/: file.c  zbase32.c
tests/: sput.h  test-bc.h  test-cclone.c  test-curl.h  test-fc.h
